# hexabomb

./: .gitignore  .travis.yml  Makefile  README.md  appveyor.yml  default.nix  dub.json  meson.build  readme.md
bots/: README.md
bots/cpp/: README.md  hexabomb-parse.cpp  hexabomb-parse.hpp  random.cpp
bots/cpp/random/: README.md  meson.build
bots/d/: README.md  dub.json
bots/d/random/: README.md
bots/d/random/src/: random.d
bots/d/src/: hexabomb_parse.d  random.d
bots/java/: README.md  pom.xml
bots/java/random/: README.md  pom.xml
bots/java/src/: Cell.java  Character.java  Coordinates.java  GameState.java
bots/python/: README.md  hexabomb.py  random_bot.py
bots/python/random/: random_bot.py
doc/img/: Makefile  hexagon.asy
docs/: Makefile  changelog.rst  clients.rst  conf.py  details.rst  game.rst  index.rst  install.rst  sudden_death.rst  tuto_first_game.rst
docs/img/: .gitignore  Makefile  README.md  board_example.asy  bomb.asy  bomb.eps  build.ninja  cell_types.asy  char.eps  char_blue.eps  char_green.eps  explosion.asy  explosion_chain_reaction.asy  explosion_fat.asy  explosion_simultaneous.asy  explosion_thin.asy  fat_bomb.eps  hexagon.asy  logo.asy  offsets.asy  palette.asy  player.asy  score.asy  thin_bomb.eps
maps/: big3.json  big4.json  big_empty.json  suddendeath4.json  tiny.json  tiny2.json
maps/editor/: README.rst  big3.tmx  big4.tmx  big_empty.tmx  big_empty_tiled.json  suddendeath4.tmx  tiled_to_hexabomb.py  tileset.xcf  tiny.tmx  tiny2.tmx  tiny_tiled.json
src/: actions.d  board.d  bomb.d  cell.d  game.d  main.d
(+2 files in other folders)
